# Lyzde-Rust

./: .gitmodules  Cargo.toml
src/: config.rs  db_helper.rs  main.rs  page_context.rs  website_helper.rs
src/controller/: blog.rs  mod.rs
src/page/: article.rs  blog.rs  index.rs  mod.rs
templates/: article.html.tera  base.html.tera  blog.html.tera  error.html.tera  index.html.tera  post.html.tera
