[package]
name = "lyzde_rust"
version = "0.1.0"
authors = ["tonny"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mysql = "*"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "*"
comrak = "0.6"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["serve", "json", "handlebars_templates", "tera_templates"]
