[package]
name = "lyzde_rust"
version = "0.1.1"
authors = ["tonny"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4.0"
time = "0.1.14"
rustc-serialize = "0.3"

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]

[dependencies.postgres]
version = "0.15"
features = ["with-serde_json", "with-chrono"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["serve", "json", "tera_templates"]
